Fixed overflow by using height: fit-content, thanks gaberoll

--- a/projects/javascript/restaurant-page/src/styles.css
+++ b/projects/javascript/restaurant-page/src/styles.css
@@ -1,88 +1,119 @@
 * {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin: 0;
-    padding: 0;
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    "Open Sans",
+    "Helvetica Neue",
+    sans-serif;
+  margin: 0;
+  padding: 0;
 }
-html, body {
-    height: 100vh;
-    color: white;
-    background-color: black;
+html,
+body {
+  height: 100vh;
+  color: white;
+  background-color: black;
 }
 
 header {
-    padding: 1em;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0px 0px 2em 0px;
+  padding: 1em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0px 0px 2em 0px;
 }
 header button {
-    padding: 0.5em;
-    font-size: 1.4em;
-    background-color: oklch(48.8% 0.243 264.376);
-    border: none;
-    color: white;
-    border-radius: 1em;
-    margin: 0px 2em;
+  padding: 0.5em;
+  font-size: 1.4em;
+  background-color: oklch(48.8% 0.243 264.376);
+  border: none;
+  color: white;
+  border-radius: 1em;
+  margin: 0px 2em;
 }
 header button:hover {
-    background-color: oklch(42.4% 0.199 265.638);
+  background-color: oklch(42.4% 0.199 265.638);
 }
 .content-container {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
+  justify-content: center;
+  align-items: center;
 }
 
 #content {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    align-items: center;
-    justify-content: space-around;
-    background-color: oklch(21% 0.034 264.665);
-    border-radius: 2em;
-    width: 50%;
-    padding: 1em;
-    box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  align-items: center;
+  justify-content: space-around;
+  background-color: oklch(21% 0.034 264.665);
+  border-radius: 2em;
+  width: 50%;
+  padding: 1em;
+  box-sizing: border-box;
 }
-#restaurant-hero, #reservation-hours, #location, #beverage-section, #main-section   {
-    background-color: oklch(27.9% 0.041 260.031);
-    padding: 2em;
-    border: none;
-    border-radius: 1em;
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
-    width: 80%;
+#restaurant-hero,
+#reservation-hours,
+#location,
+#beverage-section,
+#main-section {
+  background-color: oklch(27.9% 0.041 260.031);
+  padding: 2em;
+  border: none;
+  border-radius: 1em;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  width: 80%;
+  margin: 1em;
 }
-#restaurant-name, #reservation-hours-title, #location-title {
-    font-weight:800;
-    font-size: 2em;
+#restaurant-name,
+#reservation-hours-title,
+#location-title {
+  font-weight: 800;
+  font-size: 2em;
 }
 
-#reservation-hours-description, #location-location {
-    font-weight: 200;
+#reservation-hours-description,
+#location-location {
+  font-weight: 200;
 }
 
 #title-menu {
-    font-size: 2.5em;
-    font-weight: bold;
+  font-size: 2.5em;
+  font-weight: bold;
 }
 
-#beverage1 > p, #beverage2 > p, #main1 > p, #main2 > p, #main3 > p, #main4 > p {
-    font-size: 2em;
-    font-weight: 700;
+#beverage1 > p,
+#beverage2 > p,
+#main1 > p,
+#main2 > p,
+#main3 > p,
+#main4 > p {
+  font-size: 2em;
+  font-weight: 700;
 }
-#beverage1, #beverage2, #main1, #main2, #main3, #main4 {
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
-    font-weight: 100;
+#beverage1,
+#beverage2,
+#main1,
+#main2,
+#main3,
+#main4 {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  font-weight: 100;
 }
-#beverage-title, #main-title {
-    font-size: 2.4em;
-    font-weight: 800;
+#beverage-title,
+#main-title {
+  font-size: 2.4em;
+  font-weight: 800;
 }
